--- a/index.html
+++ b/index.html
@@ -8,30 +8,31 @@
     <meta name="viewport" content="width=device-width" />
     <title>Guess My Number</title>
   </head>
-  <body>
+  <body class="body">
     <div class="main-content">
       <header class="main-content-header">
-        <button class="button">Again!</button>
+        <button class="button again">Again!</button>
         <h3>(Between 1 and 20)</h3>
         <h1>Guess My Number!</h1>
         <div class="correct-number">
           <div class="line"></div>
-          <h2>?</h2>
+          <h2 class="secret">?</h2>
         </div>
       </header>
       <main class="main-content-game">
         <section class="game-play">
           <div class="game-entries">
-            <input type="number" />
-            <button class="button">check!</button>
+            <input class="try" placeholder="Guess" type="number" />
+            <button class="button check">check!</button>
           </div>
           <div class="game-info">
-            <h3>Start guessing...</h3>
-            <p>Score: 20</p>
-            <p>Highscore: 0</p>
+            <h3 class="tips">Start guessing...</h3>
+            <p class="score">Score: 20</p>
+            <p class="highscore">Highscore: 0</p>
           </div>
         </section>
       </main>
     </div>
   </body>
+  <script src="index.js"></script>
 </html>
