Finished Last Details

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <header class="main-content-header">
         <button class="button again">Again!</button>
         <h3>(Between 1 and 20)</h3>
-        <h1>Guess My Number!</h1>
+        <h1 class="tips">Guess My Number!</h1>
         <div class="correct-number">
           <div class="line"></div>
           <h2 class="secret">?</h2>
@@ -26,7 +26,7 @@
             <button class="button check">check!</button>
           </div>
           <div class="game-info">
-            <h3 class="tips">Start guessing...</h3>
+            <h3>Your Score</h3>
             <p class="score">Score: 20</p>
             <p class="highscore">Highscore: 0</p>
           </div>
